Fixed overflow issue on tablet size for carrier rating

--- a/app/static/less/theme.less
+++ b/app/static/less/theme.less
@@ -248,7 +248,6 @@
 }
 
 .carrier-rating{
-	min-width: 250px;
 	.h1{
 		font-size: 4em;
 	}
